
(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Mark Diggory / Ben Bosman / Kevin Van de velde)
 - [DS-335] DatabaseManager additions from Minho statistics addon.
 - [DS-247] Contribution of @MIRE Solr Based Statistics Engine to DSpace.
 - [DS-336] DSpace 2.0 Services Support / including fix for System.out lines.
 
(Andrea Bollini)
 - [DS-206] Input form visibility restriction doesn't work properly
 - [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
 - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
 - [DS-227] Values with double apos doesn't work in dropdown and list input type
 - [DS-259] Community/collection admin should not to be able to delete their admin group
 - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
 - [DS-271] Make the OAI DC crosswalk configurable
 - [DS-260] Template item some times has owningCollection filled and some times not
 - [DS-309] Shiboleth default roles are applied also to anonymous user and user logged-in with other methods
 - [DS-270] Make delegate admin permissions configurable
 - [DS-436] SWORD Authenticator doesn't support the special groups infrastructure
 - [DS-415] Create groups via admin UI authorization denied
 - [DS-217] Hardcoded String in the license bitstream

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui
 - [DS-281] Invalid Link to "Go to DSpace Home" on Page Not Found (XMLUI)
 - [DS-378] XMLUI Submission Interface messes up in IE7 after an empty <hint> in input_forms.xml
 - [DS-382] Proposal: Add 'dc.creator' to Author browse index by default
 - [DS-385] Packager script is unable to import the same METS + DIM package that was exported
 - [DS-386] Allow user to specify which <dmdSec> is used by the METS Ingester when importing METS from Packager script